# datafusion_malloc_bench

./: Cargo.toml  README.md
benches/: default.rs  jemalloc.rs  mimalloc.rs  snmalloc.rs
src/: lib.rs
tests/: allocs.rs
