[package]
name = "datafusion_malloc_bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
datafusion = "18.0.0"
dhat = "0.3.2"
tokio = { version = "1.25.0", features = ["rt", "macros"] }
criterion = { version = "0.4", features = ["html_reports", "async_tokio"] }

[dev-dependencies]
jemallocator = "0.5.0"
mimalloc = { version = "0.1.34", default-features = false }

datafusion = "18.0.0"
snmalloc-rs = "0.3.3"

[[bench]]
name = "default"
harness = false

[[bench]]
name = "mimalloc"
harness = false

[[bench]]
name = "jemalloc"
harness = false

[[bench]]
name = "snmalloc"
harness = false
